[project]
name = "ml-rag-chatbot"
version = "1.0.0"
description = "ML & Deep Learning RAG Chatbot using LangChain, LangGraph, FAISS, and Groq LLaMA3"
authors = [
    {name = "Bivor", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # LangChain & LangGraph ecosystem
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-groq>=0.2.0",
    "langchain-huggingface>=0.1.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint>=1.0.0",
    
    # Vector store & embeddings
    "faiss-cpu>=1.8.0",
    "sentence-transformers>=2.2.0",
    
    # Document loaders
    "pypdf>=4.0.0",
    "unstructured>=0.14.0",
    
    # Web framework
    "streamlit>=1.35.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "typing-extensions>=4.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true